--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -15,6 +15,9 @@ nav {
     width: 100%;
     min-height: 60px;
     opacity: 0.9;
+    position: relative;
+    height: 100%;
+
 }
 
 #navbar {
@@ -99,156 +102,3 @@ nav {
     font-family: "PT Sans Caption", sans-serif;
     color: rgba(255, 255, 255, 0.819);
 }
-
-/* 
-.main-calendar {
-
-    width: 50%;
-    height: 420px;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-
-}
-.main-calendar {
-    margin-top: 20px;
-    border: 1px solid #cccccc;
-    padding: 20px;
-    background-color: #bbbbc2;
-    /* thay đổi màu nền */
-/* width: 600px; */
-/* thay đổi kích thước */
-/* } */
-
-
-
-/* Define the calendar table grid */
-/* .custom-calendar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 75%;
-    margin: auto;
-
-
-}
-
-.react-calendar {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.react-calendar *,
-.react-calendar *:before,
-.react-calendar *:after {
-    box-sizing: border-box;
-}
-
-.react-calendar button {
-    margin: 0;
-    border: none;
-    background: none;
-    outline: none;
-    cursor: pointer;
-    font: inherit;
-}
-
-.react-calendar button:enabled:hover,
-.react-calendar button:enabled:focus {
-    background-color: #555566;
-}
-
-.react-calendar button:active {
-    background-color: #d5d5d5;
-}
-
-.react-calendar .react-calendar__navigation {
-    height: 2.5em;
-    margin-bottom: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #5d656f;
-    color: white;
-    font-weight: bold;
-    border-radius: 4px;
-    padding: 0.5em 1em;
-    width: 500px;
-    height: 50px;
-    border-color: #1b1d27 !important;
-    background-color: #1b1d27;
-}
-
-.react-calendar .react-calendar__navigation button {
-    min-width: 3.2em;
-    text-align: center;
-    background-color: #1b1d27;
-    color: white;
-    border-radius: 2px;
-}
-
-.react-calendar__month-view__weekdays {
-    text-transform: uppercase;
-    font-weight: bold;
-    background-color: #9f7150;
-    border-color: #9f7150 !important;
-}
-
-.react-calendar__month-view__weekdays__weekday {
-    padding: 0.5em;
-}
-
-.react-calendar__month-view__days {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-}
-
-.react-calendar__tile {
-    flex: 1 0 14.2857%;
-    max-width: 14.2857%;
-    padding: 0.5em;
-    background-color: white;
-    border: 1px solid #e1e1e1;
-    color: black;
-    text-align: center;
-}
-
-.react-calendar__tile:disabled {
-    background-color: #f0f0f0;
-    color: #a3a3a3;
-}
-
-.react-calendar__tile:enabled:hover,
-.react-calendar__tile:enabled:focus {
-    background-color: #e6e6e6;
-}
-
-.react-calendar__tile--now {
-    background: #555;
-    color: white;
-}
-
-.react-calendar__tile--now:enabled:hover,
-.react-calendar__tile--now:enabled:focus {
-    background: #5d656f;
-}
-
-.react-calendar__tile--active {
-    background: #5d656f;
-    color: white;
-}
-
-.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile--active:enabled:focus {
-    background: #5d656f;
-}
-
-.main-calendar .english-text {
-    font-family: Arial, sans-serif;
-
-}
-
-*/
