--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,43 +6,53 @@
 
 
 
-nav {
+.header {
     display: flex;
-    align-items: center;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     background: #1b1b1b;
     position: fixed;
     width: 100%;
     min-height: 60px;
     opacity: 0.9;
     position: relative;
-    height: 100%;
+    height: 118px;
+    width: auto;
 
 }
 
-#navbar {
+.header-logo {
     display: flex;
-    align-items: center;
-    justify-content: center;
-
+    flex-direction: row;
 }
 
-#navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
+.logo {
+    padding-top: 20px;
 }
 
-#navbar li a {
+.container-title {
+    color: #c62020;
+    max-width: 30px;
+    height: auto;
+    display: flex;
+    margin-left: 20px;
+}
+
+.navbar {
+    margin-right: 50px;
+}
+
+.navber-link {
     text-decoration: none;
-    font-size: 1.3 rem;
-    font-weight: 600;
-    color: #fff
+    color: #ffffff;
+    padding: 10px 15px;
 }
 
-#navbar li a:hover {
-    color: #17cf97;
+.navber-link:hover {
+    color: green;
 }
+
 
 
 .container {
