--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -11,13 +11,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background: #1b1b1b;
-    position: fixed;
+    background: #000000;
     width: 100%;
-    min-height: 60px;
     opacity: 0.9;
-    position: relative;
-    height: 118px;
+    z-index: 1000;
+    height: 80px;
     width: auto;
 
 }
@@ -25,15 +23,17 @@
 .header-logo {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
 }
 
 .logo {
-    padding-top: 20px;
+    cursor: pointer;
 }
 
 .container-title {
     color: #c62020;
-    max-width: 30px;
     height: auto;
     display: flex;
     margin-left: 20px;
@@ -76,7 +76,7 @@
 .main {
     width: 100%;
     height: 100vh;
-    background-image: url(../../background/babershop.webp);
+    background-image: url(../../background/barberheader.jpg);
     background-size: cover;
     display: flex;
     justify-content: space-between;
@@ -102,13 +102,13 @@
 .main-content h1 {
     line-height: 45px;
     font-size: 42px;
-    font-family: "Prata", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: red;
 }
 
 .main-content p {
     font-size: 20px;
     line-height: 25px;
-    font-family: "PT Sans Caption", sans-serif;
-    color: rgba(255, 255, 255, 0.819);
+    font-family: 'Open Sans', sans-serif;
+    color: blanchedalmond;
 }
