--- a/src/components/Calender/calender.css
+++ b/src/components/Calender/calender.css
@@ -1,4 +1,4 @@
-.main-calendar {
+/* .main-calendar {
     margin-right: 100px;
     font-size: 150%;
 }
@@ -10,11 +10,6 @@
 }
 
 
-
-/* .calender-delete {
-    border-radius: 20px;
-
-} */
 
 .css-hlj6pa-MuiDialogActions-root {
     display: none !important;
@@ -42,4 +37,4 @@
 
 .css-i5q14k-MuiDayCalendar-header {
     background: #9f7150 !important
-}
+} */
