--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,32 +4,34 @@
     box-sizing: border-box;
 }
 
-
-
 .header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background: #000000;
+    background: #1b1b1b;
     width: 100%;
     opacity: 0.9;
     z-index: 1000;
     height: 80px;
     width: auto;
+}
 
+.header-scroll {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .header-logo {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     margin-left: 20px;
 }
 
 .logo {
     cursor: pointer;
+    height: 80px;
 }
 
 .container-title {
@@ -43,72 +45,14 @@
     margin-right: 50px;
 }
 
-.navber-link {
+.navbar-link {
     text-decoration: none;
-    color: #ffffff;
+    color: #bfbab0;
     padding: 10px 15px;
+    font-family: 'PT Sans Caption', sans-serif;
+    font-weight: 400;
 }
 
-.navber-link:hover {
-    color: green;
-}
-
-
-
-.container {
-    position: relative;
-}
-
-.container {
-    position: relative;
-}
-
-.bg-text {
-    position: fixed;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-    font-size: 2rem;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.main {
-    width: 100%;
-    height: 100vh;
-    background-image: url(../../background/barberheader.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    background-color: rgba(0, 0, 0, 0.65);
-
-}
-
-
-.main-content {
-
-    width: 50%;
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 150px;
-
-}
-
-.main-content h1 {
-    line-height: 45px;
-    font-size: 42px;
-    font-family: 'Open Sans', sans-serif;
-    color: red;
-}
-
-.main-content p {
-    font-size: 20px;
-    line-height: 25px;
-    font-family: 'Open Sans', sans-serif;
-    color: blanchedalmond;
+.navbar-link:hover {
+    color: #9f7150;
 }
