--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prata&family=Source+Sans+Pro:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prata&family=Source+Sans+Pro:wght@400;600;700&family=PT+Sans+Caption:wght@400;700&display=swap');
 
 html,
 body,
